<resources>
    <string name="app_name">Covid-19 Companion</string>
    <string name="title_podcast">Podcast</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="confirmed">Confirmed</string>
    <string name="title_hand_hygiene"><![CDATA[Hand Hygiene: Why, How & When?]]></string>
    <string name="cases_title">Updated information about Covid-19 Cases.</string>
    <string name="title_last_updated">"Last Updated: "</string>
    <string name="confirmed_lower_case">confirmed</string>
    <string name="recovered_lower_case">recovered</string>
    <string name="deaths_lower_case">deaths</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="cases_placeholder">%d </string>
    <string name="new_cases_placeholder">%s NEW</string>
    <string name="prevention_title">Wash your hands frequently</string>
    <string name="prevention_next">Next</string>
    <string name="prevention_summary1">Regularly and thoroughly clean your hands with an alcohol-based
            hand rub or wash them with soap and water.
    </string>
    <string name="prevention_summary2"> Why? </string>
    <string name="prevention_summary3">Washing your hands with soap and water or using alcohol-based
            hand rub kills viruses that may  be on your hands.
    </string>
    <string name="nigeria">Nigeria</string>
    <string name="cases">Cases</string>
    <string name="cases_upper_case">CASES</string>
    <string name="settings">Settings</string>
    <string name="rem_hand_loc">Remind me to wash my hands at certain locations</string>
    <string name="rem_hand_time">Remind me to wash my hands every 30 minutes</string>
    <string name="rem_water">Remind me to drink water every 1 hour</string>
    <string name="podcast">Notify me of new episodes on Podcast</string>
    <string name="notification">Use CoVID-19 custom notification tone</string>
    <string name="about">About CoVID-19 Companion</string>


    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="public_health_on_call_title">Public Health on Call</string>
    <string name="public_health_on_call_caption">Evidence and experts to help you understand today’s COVID-19 news - and what it means for tomorrow.</string>
    <string name="latest_podcasts">Latest Podcasts</string>
    <string name="title_help">Help</string>
    <string name="title_help_full">Help and Information</string>
    <string name="title_screening_tool">COVID-19 Screening Tool</string>
    <string name="how_to_fight_corona_virus">How to fight Corona Virus</string>
    <string name="why">Why?</string>
    <string name="default_text_wash_hands_reminder">Remind me to wash my hands</string>
    <string name="placeholder_wash_hands_reminder">"Remind me to wash my hands every %s</string>
    <string name="default_text_drink_water_reminder">Remind me to drink water</string>
    <string name="placeholder_drink_water_reminder">"Remind me to drink water every %s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_screening">START SCREENING</string>
    <string name="title_initial_screening_questions">Please enter your gender and age to begin.</string>
    <string name="question_gender">Your Gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="question_age">Your Age?</string>
    <string name="instruction_group_single">Select one that applies:</string>
    <string name="instruction_group_multiple">Select the conditions that apply to you or none if they don\'t apply:</string>
    <string name="back">Back</string>
    <string name="loading">Loading</string>
    <string name="observations">Observations</string>
    <string name="explanation_serious">Observations with this icon are alarming and require consultation with a medical professional.</string>
    <string name="explanation_is_emergency">Observations with this icon are particularly urgent and may require immediate attention.</string>
    <string name="select_gender">Select a Gender</string>
    <string name="enter_age">Enter your age</string>
    <string name="loading_question">Loading next Question</string>
    <string name="exit_screening_tool_dialog_message">Do you want to exit the Screening Tool?</string>
    <string name="error_loading_question">An Error occurred while loading the next Question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="no_option_selected">Choose an Option that applies</string>
    <string name="error_get_diagnosis">An error occurred while getting your Diagnosis. Please try again.</string>
    <string name="try_again">Try again</string>
    <string name="no_observations">No Observations</string>
    <string name="resources">Resources</string>
    <string name="development_team">Development Team</string>
    <string name="releases">Releases</string>
    <string name="sort_by_confirmed">Sort by Confirmed</string>
    <string name="sort_by_recovered">Sort by Recovered</string>
    <string name="sort_by_death">Sort by Death</string>
    <string name="placeholder_title_notification">Hey there %s,</string>
    <string name="text_wash_hands_reminder">Stay safe, it’s time to wash your hands.</string>
    <string name="text_drink_water_reminder">Stay healthy and hydrated, it’s time to drink water.</string>
    <string name="channel_desc_reminders_default_tone">A channel for reminders to wash your hands and drink water using your default Notification Tone</string>
    <string name="channel_desc_reminders_custom_tone">A channel for reminders to wash your hands and drink water using custom Notification Tone</string>
    <string name="channel_desc_default">A channel for Normal notifications</string>
    <string name="channel_name_reminders_default_tone">Reminders Channel with Default Notification Tone</string>
    <string name="channel_name_reminders_custom_tone">Reminders Channel with Custom Notification Tone</string>
    <string name="channel_name_default">Default Channel</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="confirmed_cases_country">Cofirmed Cases by Country</string>
    <string name="confirmed_cases_by_country">Confirmed Cases by Country</string>
    <string name="deaths_by_country">Deaths by Country</string>
    <string name="recovered_by_country">Recovered by Country</string>
    <string name="accept_permissions">Please accept the permissions to use this feature</string>
    <string name="add_location">Add Location</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="location_title">Location Name</string>
    <string name="location_address">Location Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_location">Enter Location</string>
    <string name="location_details">Location Details</string>
    <string name="placeholder_location_wash_hands_reminder">Have you washed your Hands since you arrived at %s? Stay Safe.</string>
    <string name="new_cases_today">New cases Today</string>
    <string name="new_cases_today_value">10,000</string>
    <string name="new_deaths_today">New deaths Today</string>
    <string name="new_deaths_today_value">10,000</string>
    <string name="cases_per_million">Cases per million</string>
    <string name="cases_per_million_value">10,000</string>
    <string name="deaths_per_million">Deaths per Million</string>
    <string name="deaths_per_million_value">10,000</string>
    <string name="state">STATE</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_cases_value">10,000</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="unknown">Unknown</string>
    <string name="error_update_regional_cases_data">Could not update Regional Cases Data. Please try again.</string>
    <string name="error_update_cases_data">Could not update Cases Data. Please try again.</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien, pharetra, vitae eu, amet, pulvinar scelerisque et neque. At tellus, in faucibus auctor. Viverra ligula arcu, consequat scelerisque feugiat non. Et viverra massa nisi, tellus.</string>
    <string name="lorem_ipsum_quote">You are this because you are that. Only if you believe otherwise will you stay where you are. Start doing what you want to today and you will get where you are going</string>
    <string name="placeholder_title_motivation_notification">Hang in there %s,</string>
    <string name="placeholder_title_app_update_notification">Good News %s,</string>
    <string name="message_app_update_notification">An Update is available. Click here to download it.</string>
    <string name="placeholder_app_version_file_name">Covid-19 Companion_v%s.apk</string>
    <string name="update_app">Update App</string>
    <string name="placeholder_version_name">Version %s</string>
    <string name="what_s_new">What\'s new</string>
    <string name="change_username">Change Username</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="survivor">Survivor</string>
    <string name="change_country">Change Country</string>
    <string name="title_daily_motivation">DAILY MOTIVATION</string>
    <string name="instructions_long_press_splashscreen">Press and hold anywhere to pin the Splashscreen</string>
    <string name="instructions_tap_splashscreen">"Tap anywhere to dismiss the Splashscreen"</string>
    <string name="placeholder_hello_user">Hello %s</string>
    <string name="accept_permission_hand_hygiene">Please accept the permission request in other to download the Hand Hygiene Brochure</string>
    <string name="storage_permission_request_app_update">Please grant Covid-19 Companion Storage permissions so that it can download App updates</string>
    <string name="hours">Hrs</string>
    <string name="minutes">Mins</string>
    <string name="screening_tool_description">Answer the questions that follow anonymously to check if you have been exhibiting symptoms relating to Covid-19 and get advice on the next step you should take.</string>
    <string name="about_app">CoVID-19 Companion is a handy tool that lets you keep up with the daily changes in the number of the COVID-19 cases in the world. It is an opensource project that was created for the current pandemic we face as a planet; Our own little way of contributing to society. \nMade with love in Nigeria.</string>
    <string name="regional_data_unavailable">States Data not yet available. Stay tuned.</string>

</resources>
