<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screeningTool.fragments.InitialQuestionsFragment">

    <TextView
        android:id="@+id/titleTV"
        style="@style/Covid19TextView.Head.Title"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/title_initial_screening_questions"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_screening_tool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/genderQuestionTV"
        style="@style/Covid19TextView.Body.Title"
        android:text="@string/question_gender"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <RadioGroup
        android:id="@+id/genderQuestionRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genderQuestionTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/radioButtonText"
            android:layout_marginEnd="14dp"/>

        <RadioButton
            android:id="@+id/femaleRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/radioButtonText"
            android:layout_marginStart="14dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/ageQuestionTV"
        style="@style/Covid19TextView.Body.Title"
        android:text="@string/question_age"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/genderQuestionRG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/ageET"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:maxLines="1"
        android:background="@drawable/bg_search_edit_text"
        app:layout_constraintTop_toBottomOf="@id/ageQuestionTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextMB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/ageET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>