<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.landing.settings.washHandsReminderLocation.WashHandsReminderLocationBottomDialogFragment"
    app:cardCornerRadius="30dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/v_indicator"
            style="@style/BottomSheetIndicator"
            android:layout_marginTop="@dimen/bottom_sheet_indicator_margin_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/usernameTV"
            style="@style/Covid19TextView.Body.Paragraph"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@id/v_indicator"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usernameET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:background="@drawable/bg_search_filter_edit_text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTV"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveMB"
            style="@style/Covid19MaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/usernameET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>